--- a/styles/main.css
+++ b/styles/main.css
@@ -461,7 +461,6 @@ input {
 }
 
 .notification:hover .bell {
-  margin: 5% 8%;
 }
 
 .notification:hover .content__head {
@@ -498,7 +497,9 @@ input {
 
 .bell {
   position: absolute;
-  margin: 25% 28%;
+  width: 100%;
+  height: 100%;
+  line-height: 42px;
   transition: all 0.25s ease-in-out;
   z-index: 3;
 }
@@ -506,6 +507,7 @@ input {
 .bell::before {
   content: "\f0f3";
   font-family: FontAwesome;
+  padding: 0 11.5px;
   color: #f9f0da;
   font-size: 20px;
   transition: all 0.5s ease-in-out;
@@ -1219,10 +1221,11 @@ html.transition * {
   }
 
   .bell {
-    margin: 18% 28%;
+    line-height: 30px;
   }
 
   .bell::before {
+    padding: 0 8.3px;
     font-size: 14.3px;
   }
 }
@@ -1283,6 +1286,7 @@ html.transition * {
       height: 20em;
     }
   }
+ 
 }
 
 .checkbox {
